# sudoku

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
assets/: assets.qrc
forms/: mainwindow.ui
include/: mainwindow.h  my_types.h  mylineedit.h
l10n/: translation_pt.ts
src/: main.cpp  mainwindow.cpp  mylineedit.cpp  solver.hpp
